--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@
 }
 
 .last-banner {
-  background-image: url(./flower-shop-assignment/Asset/Rectangle\ 9.png);
+  background-image: url(./Asset/Rectangle\ 9.png);
   width: 800px;
   height: 250px;
   margin: 100px 400px;
