--- a/style.css
+++ b/style.css
@@ -118,9 +118,9 @@
 .deals{
     color: #272727;
 text-align: center;
-font-size: 40px;
-font-weight: 800;
-padding-top: 50px;
+font-size: 30px;
+font-weight: 600;
+padding-top: 80px;
 
 }
 
@@ -159,4 +159,20 @@ height: 40px;
   margin-left: 200px;
   border-color: #cd3a5a;
   
+}
+.fshop{
+  color: #E55473;
+font-family: Lato;
+font-size: 48px;
+font-weight: 800;
+
+}
+.xshop{
+  color: rgb(248, 242, 242)
+}
+.main-footer{
+  text-align: center;
+  background-color: black;
+  color: white;
+  margin-bottom: 50px;
 }
